--- a/program1.html
+++ b/program1.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>getElementById</title>
+    <title>Change Paragraph Color</title>
 </head>
 <body>
-    <p id="demo">Paragraph</p>
+    <p id="myParagraph">This is a paragraph.</p>
     <script>
-        var a=document.getElementById("demo");
-        a.style.backgroundColor="skyblue";
-        a.style.padding="20px";
-
+        var paragraph = document.getElementById("myParagraph");
+        paragraph.style.color = "red";
     </script>
-    
 </body>
 </html>
